src/objects/Text_Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Text_Message_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Template_Body__c</fullName>
        <label>Template Body</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Text Message Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMT-{00000000}</displayFormat>
        <label>Text Message Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Text Message Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>